--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -223,8 +223,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+
   line-height: 20px;
   color: #333333;
   background-color: #ffffff;
@@ -972,7 +971,7 @@ address {
 code,
 pre {
   padding: 0 3px 2px;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+
   font-size: 12px;
   color: #333333;
   -webkit-border-radius: 3px;
@@ -1065,7 +1064,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: inherit;
 }
 
 label {
@@ -4519,7 +4518,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   padding: 4px 14px;
   margin-bottom: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
