--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body{
   background-color: #e0e0e0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
 }
+
 .container, .container-fluid{
   background-color: white;
 }
@@ -13,4 +16,13 @@ body{
 
 .text-justify{
   text-align: justify;
+}
+.font-italic{
+  font-style: italic;
+}
+.text-uppercase{
+  text-transform: uppercase;
+}
+.text-capitalize{
+  text-transform: capitalize;
 }
